# crewai-multi-phase-workshop

./: .env.example  .gitignore  README.md  report.md  requirements.txt
db/: chroma.sqlite3
outputs/: generated_code_phase4.py  report_phase1.md  sample_phase6.csv  sample_phase6.json
phase_0_hello_crew/: README.md  pyproject.toml  report.md
phase_0_hello_crew/src/phase_0_hello_crew/: crew.py  main.py
phase_0_hello_crew/src/phase_0_hello_crew/config/: agents.yaml  tasks.yaml
phases/: phase0_hello_crew.py  phase1_departmental_crew.py  phase1_task_chaining.py  phase2_flow_and_custom_tool.py  phase2_flows_custom_tool.py  phase3_creator_prototype.py  phase4_file_tools.py  phase5_telegram_api.py  phase6_file_qa_fallback.py  phase6_rag_pdf.py
