[project]
name = "phase_0_hello_crew"
version = "0.1.0"
description = "Phase-0-Hello-Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
phase_0_hello_crew = "phase_0_hello_crew.main:run"
run_crew = "phase_0_hello_crew.main:run"
train = "phase_0_hello_crew.main:train"
replay = "phase_0_hello_crew.main:replay"
test = "phase_0_hello_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
